separate sections with padding and fix spacing

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,5 +1,5 @@
 .about {
-    margin: 80px 0px;
+    padding: 80px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
