--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,6 +1,5 @@
 .contact {
-    margin-bottom: 100px; /* Remove this*/
-    padding: 50px;
+    padding: 80px 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
