--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
-    padding: 50px;
+    padding: 80px 50px;
     display: flex;
     justify-content: space-between;
     background-color: rgb(35, 58, 140);
