--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,5 +1,5 @@
 .projects {
-    margin: 80px 0px;
+    padding: 80px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
