--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,5 +1,5 @@
 .skills {
-    padding: 50px;
+    padding: 80px 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
